--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,23 +1,24 @@
 modLoader="javafml"
-loaderVersion="[28,)"
+loaderVersion="[29,)"
 issueTrackerURL="https://www.curseforge.com/minecraft/mc-mods/extra-boats/issues"
 [[mods]]
 modId="extraboats"
-version="1.2.6"
+version="1.3.0"
 displayName="Extra Boats"
 displayURL="https://www.curseforge.com/minecraft/mc-mods/extra-boats"
+logoFile="logo.png"
 credits="Markus1002, asthyr, Pandory_, kubajzzz, rio192al, kemiuu"
 authors="Markus1002"
 description='''Adds some new types of boats to make ocean exploration more interesting.'''
 [[dependencies.extraboats]]
     modId="forge"
     mandatory=true
-    versionRange="[28,)"
+    versionRange="[29,)"
     ordering="NONE"
     side="BOTH"
 [[dependencies.extraboats]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.14.4]"
+    versionRange="[1.15.2]"
     ordering="NONE"
     side="BOTH"
