--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -3,22 +3,22 @@ loaderVersion="[29,)"
 issueTrackerURL="https://github.com/Markus1002/Extra-Boats/issues"
 [[mods]]
 modId="extraboats"
-version="1.3.6"
+version="1.4.0"
 displayName="Extra Boats"
 displayURL="https://www.curseforge.com/minecraft/mc-mods/extra-boats"
 logoFile="logo.png"
 credits="Markus1002, Translators: asthyr, Pandory_, kubajzzz, rio192al, kemiuu, peehpeh, F4zzer"
 authors="Markus1002"
-description='''Adds some new types of boats to make ocean exploration more interesting.'''
+description='''Adds some new kinds of boats to make ocean exploration more interesting.'''
 [[dependencies.extraboats]]
     modId="forge"
     mandatory=true
-    versionRange="[29,)"
+    versionRange="[32.0.47,)"
     ordering="NONE"
     side="BOTH"
 [[dependencies.extraboats]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.15.2]"
+    versionRange="[1.16.1]"
     ordering="NONE"
     side="BOTH"
