--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -9,7 +9,7 @@ version="1.4.1"
 displayName="Extra Boats"
 displayURL="https://www.curseforge.com/minecraft/mc-mods/extra-boats"
 logoFile="logo.png"
-credits="Markus1002, Translators: asthyr, Pandory_, kubajzzz, rio192al, kemiuu, peehpeh, F4zzer, Rye, feliclaria"
+credits="Creator: Markus1002, Translators: asthyr, Pandory_, kubajzzz, rio192al, kemiuu, peehpeh, F4zzer, Rye, feliclaria, Estellarium"
 authors="Markus1002"
 description='''Adds some new kinds of boats to make ocean exploration more interesting.'''
 
