--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,7 @@ minecraft {
             workingDirectory project.file("run")
             property "forge.logging.markers", "SCAN,REGISTRIES,REGISTRYDUMP"
             property "forge.logging.console.level", "debug"
-            args "--mod", "examplemod", "--all", "--output", file("src/generated/resources/")
+            args "--mod", "extraboats", "--all", "--output", file("src/generated/resources/")
             mods {
                 extraboats {
                     source sourceSets.main
