--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -28,7 +28,7 @@ license = "https://github.com/team-abnormals/extra-boats/blob/main/LICENSE.txt"
     ordering = "NONE"
     side = "BOTH"
 
-[[dependencies.environmental]]
+[[dependencies.extraboats]]
     modId = "abnormals_core"
     mandatory = true
     versionRange = "[3.0.4,)"
