--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,14 @@
-# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-# This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx3G
+org.gradle.jvmargs=-Xmx4G
 org.gradle.daemon=false
 org.gradle.caching=true
 org.gradle.parallel=true
 gradle.cache.push=false
 
-minecraft=1.16.4
-forge=35.1.10
-mappings=20201028-1.16.3
-mappingsChannel=snapshot
-
 modName=Extra Boats
 modId=extraboats
 modVersion=2.1.0
 
-abnormalsCore=3157757
+minecraft=1.16.5
+forge=36.2.0
+abnormalsCore=3.2.0
+jei=7.7.1.110
