--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -7,8 +7,11 @@ license = "https://github.com/team-abnormals/extra-boats/blob/main/LICENSE.txt"
     modId = "extraboats"
     version = "${file.jarVersion}"
     logoFile = "logo.png"
+    itemIcon = "extraboats:birch_furnace_boat"
+    configBackground = "minecraft:textures/block/birch_planks.png"
     authors = "Team Abnormals"
     credits = "Markus1002"
+    displayURL = "https://www.teamabnormals.com/mods/extra-boats"
     displayName = "Extra Boats"
     description = '''
     Adds some new kinds of boats to make ocean exploration more interesting.
@@ -17,20 +20,20 @@ license = "https://github.com/team-abnormals/extra-boats/blob/main/LICENSE.txt"
 [[dependencies.extraboats]]
     modId = "minecraft"
     mandatory = true
-    versionRange = "[1.16.3,1.17)"
+    versionRange = "[1.16.5,1.17)"
     ordering = "NONE"
     side = "BOTH"
 
 [[dependencies.extraboats]]
     modId = "forge"
     mandatory = true
-    versionRange = "[34.1.42,)"
+    versionRange = "[36.2.0,)"
     ordering = "NONE"
     side = "BOTH"
 
 [[dependencies.extraboats]]
     modId = "abnormals_core"
     mandatory = true
-    versionRange = "[3.0.4,)"
+    versionRange = "[3.2.0,)"
     ordering = "AFTER"
     side = "BOTH"
