--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -14,7 +14,7 @@ license = "https://github.com/team-abnormals/boatload/blob/main/LICENSE.txt"
     displayURL = "https://www.teamabnormals.com/mods/boatload"
     displayName = "Boatload"
     description = '''
-    Adds some new kinds of boats to make ocean exploration more interesting.
+    Adds Furnace Boats and Large Boats to make ocean exploration more interesting and interactive!
     '''
 
 [[dependencies.boatload]]
@@ -27,7 +27,7 @@ license = "https://github.com/team-abnormals/boatload/blob/main/LICENSE.txt"
 [[dependencies.boatload]]
     modId = "forge"
     mandatory = true
-    versionRange = "[41.0.100,)"
+    versionRange = "[41.1.0,)"
     ordering = "NONE"
     side = "BOTH"
 
