Crimson & Warped boats

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -11,3 +11,4 @@ protected net.minecraft.world.entity.vehicle.Boat f_38281_ # lastYd
 protected net.minecraft.world.entity.vehicle.Boat f_38278_ # boatGlide
 protected net.minecraft.world.entity.vehicle.Boat m_38396_()V # controlBoat
 protected net.minecraft.world.entity.vehicle.Boat m_38395_()V # updateMotion
+protected net.minecraft.data.recipes.RecipeProvider m_236371_(Ljava/util/function/Consumer;Lnet/minecraft/world/level/ItemLike;Lnet/minecraft/world/level/ItemLike;)V # chestBoat
