Updated some stuff

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,9 +6,9 @@ gradle.cache.push=false
 
 modName=Boatload
 modId=boatload
-modVersion=4.2.1
+modVersion=4.2.2-alpha1
 
 minecraft=1.19.2
 forge=43.1.0
-blueprint=6.1.0
+blueprint=6.1.2
 jei=11.3.0.262
